# shr3rs

./: Cargo.toml  README.md  build.rs
examples/: simple.rs
maintenance/: build-avr.sh  makerelease.sh
src/: arch.rs  lib.rs
src/arch/: avr.rs  generic.rs
